--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,6 +35,8 @@
 
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
+<script src="/js/scatter.js"></script>
+
 <script src="/js/sunburst.js"></script>
 
 <body>
