--- a/public/styles.css
+++ b/public/styles.css
@@ -62,18 +62,19 @@ header .page-title {
 
 .tagGroup input {
     margin: 0px 5px;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     background-repeat: no-repeat;
     color: transparent;
+    border: 2px solid transparent;
 }
 
 .tagGroup input.requireButton {
-    background-image: url(open-mouth.jpg);
+    background-image: url(require.png);
 }
 
 .tagGroup input.excludeButton {
-    background-image: url(closed-eye.jpg);
+    background-image: url(exclude.png);
 }
 
 .requiredTag input.requireButton {
