--- a/public/styles.css
+++ b/public/styles.css
@@ -50,6 +50,10 @@ header .page-title {
     font-family: "American Typewriter", sans-serif;
 }
 
+.typeThisAtCommandLine {
+    font-family: "American Typewriter", sans-serif;
+}
+
 /* "explore" sunburst page */
 
 .percentageOfProjectWithoutTag {
