--- a/public/styles.css
+++ b/public/styles.css
@@ -50,6 +50,83 @@ header .page-title {
     font-family: "American Typewriter", sans-serif;
 }
 
+.analysesProvenanceDetail {
+    font-size: x-small;
+    margin: 0;
+}
+
+/* analysis tracking page */
+
+.typeThisAtCommandLine {
+    font-family: "American Typewriter", sans-serif;
+}
+
+.ongoingAnalysis {
+    padding: 5px;
+    background-color: lightgreen;
+}
+
+.nongoingAnalysis {
+    padding: 5px;
+    background-color: lightgray;
+}
+
+div.repositoryColumns>div {
+    display: inline-block;
+    border: 1px dotted blue;
+    vertical-align: top;
+    padding: 5px;
+    width: 30%;
+}
+
+.keptExistingAnalysis {
+    color: gray;
+    font-style: italic;
+}
+
+.linkToSourceImage {
+    width: 1em;
+    height: 1em;
+    border: 1px white outset;
+}
+
+.analysisRepoDescription {
+    margin: 0px;
+}
+
+.analysisTrackingRepo {
+    margin: 5px;
+    padding: 2px;
+    padding-left: 5px;
+    border-color: burlywood;
+    border-width: 4px;
+    border-style: ridge;
+    background-color: antiquewhite;
+}
+
+.analysisTrackingRepo.Going {
+    border-color: deeppink;
+}
+
+.analysisTrackingRepo.Stopped {
+    border-color: forestgreen;
+}
+
+.analysisTrackingRepo.failed {
+    border-color: crimson;
+}
+
+.analyzeRepoErrors {
+    border-color: crimson;
+    border-style: ridge;
+    border-width: 3px;
+    padding-left: 4px;
+}
+
+.timeTakenToAnalyzeRepo {
+    font-size: x-small;
+}
+
 /* "explore" sunburst page */
 
 .percentageOfProjectWithoutTag {
