Add insights link to tracking page

--- a/public/styles.css
+++ b/public/styles.css
@@ -90,6 +90,12 @@ div.repositoryColumns>div {
     border: 1px white outset;
 }
 
+.linkToInsightsImage {
+    width: 1em;
+    height: 1em;
+    border: 1px white outset;
+}
+
 .analysisRepoDescription {
     margin: 0px;
 }
