--- a/public/styles.css
+++ b/public/styles.css
@@ -60,6 +60,11 @@ header .page-title {
     margin: 0;
 }
 
+.insightsImage {
+    width: 1em;
+    height: 1em;
+}
+
 /* analysis tracking page */
 
 .typeThisAtCommandLine {
