Give the flexbox a hint
Drew reveals the secret: if you hint to flexbox at the flex-item level
that this one might scroll inside, then it lets the flexbox fit in
the box around it.

This makes a difference when there's errors in an analysis, now it doesn't
grow to the right and off the page.

--- a/public/styles.css
+++ b/public/styles.css
@@ -89,6 +89,7 @@ div.repositoryColumns>div {
     border: 1px dotted blue;
     vertical-align: top;
     padding: 5px;
+    overflow: scroll;
 }
 
 .keptExistingAnalysis {
